# altWinDirStat

./: .gitignore  BugsToBeFixed.txt  CItemBranch_in_memory_layout.txt  DoSomeWork_Ticks_Benchmark.txt  LICENSE_STR.txt  README.md  designInsight.txt  designPlansGoingForward.txt  exceptions_design_choicestxt.txt  idea.txt  invert_compose.txt  parallel_stress.py  perf_testing.txt  populateDir.py  test_how_a_really_fucking_horrible_expression_in_SequoiaView_is_parsed.txt  things to investigate.txt
.github/: FUNDING.yml
NTFS-Search-OSR/: NTFS-Search.sln
NTFS-Search-OSR/NTFS-Search/: NTFS-Search.vcxproj  NTFS_SEARCH.cpp  NTFS_STRUCT.cpp  NTFS_STRUCT.h  stdafx.h
Reference code/AsyncWalk/: AsyncWalk.sln
Reference code/FarManager_farplug/: licence_info.txt
Reference code/FarManager_farplug/farplug/defrag/: CMakeLists.txt  defragment.h  ntfs.h  utils.cpp  volume.cpp
Reference code/FastDirEnum_BOOST_AFIO/: FastDirEnum_BOOST_AFIO.sln
Reference code/NT_Q_DIR_TEST_2/: NT_Q_DIR_TEST_2.sln
Reference code/NtCreateFile/: NtCreateFile.sln  NtCreateFile.vcxproj  (+2 more)
WinDirStat/: README.md  README.txt  TESTPLAN.txt  TODO.txt  WinDirStat.ruleset  altWinDirStat.smproj  changelog.txt  cleanbuild.cmd  dependencies.dgml  file_header_text.txt  windirstat.sln
filesystem-docs-n-stuff/: 5.4.MFT_Analysis.ppt  NTFS Chkdsk Best Practices and Performance.docx  STO123_WH06.ppt  Windows 2000 File Systems.doc  Windows Home Server Technical Brief - Drive Extender.docx  implications of subkeys-2002-March.txt
stress_scripts/: parallel_stress.py  populateDirWithSingleFiletype.py
(+2274 files in other folders)
