CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(defrag)
SET(src ${CMAKE_CURRENT_SOURCE_DIR})
SET(top ${src}/..)
IF(DEFINED MSVC)
  INCLUDE(${top}/cmake/MSVC.cmake)
ENDIF(DEFINED MSVC)
INCLUDE_DIRECTORIES(${src} ${top})
ADD_EXECUTABLE(defrag main.cpp defragment.cpp volume.cpp utils.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} mpr)
